--- a/index.html
+++ b/index.html
@@ -672,7 +672,7 @@ Projects: Internal Stock handling system and a Sales Force Automation System
 								<div class="col-half-section col-half-section-right mr-3">
 
 									<h2 class="text-color-light text-uppercase font-weight-extra-bold">Say Hello</h2>
-									<form id="contactForm" class="contact-form custom-form-style form-errors-light" action="php/contact-form.php" method="post">
+									<form id="contactForm" class="contact-form custom-form-style form-errors-light" action="https://formspree.io/f/xanypblk" method="post">
 										<div class="contact-form-success alert alert-success d-none mt-4" id="contactSuccess">
 											<strong>Success!</strong> Your message has been sent to us.
 										</div>
@@ -694,6 +694,7 @@ Projects: Internal Stock handling system and a Sales Force Automation System
 											<input type="submit" class="btn btn-quaternary text-color-light text-uppercase font-weight-semibold outline-none custom-btn-style-2 custom-border-radius-1" value="Submit" />
 										</div>
 									</form>
+									
 
 								</div>
 							</div>
