Update google tag

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 	<head>
 
 		<!-- Google tag (gtag.js) -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-S7TWW6JRB6"></script>
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-NJVTS7YRE6"></script>
 		<script>
 		  window.dataLayer = window.dataLayer || [];
 		  function gtag(){dataLayer.push(arguments);}
 		  gtag('js', new Date());
 		
-		  gtag('config', 'G-S7TWW6JRB6');
+		  gtag('config', 'G-NJVTS7YRE6');
 		</script>
 
 		<!-- Basic -->
