--- a/index.html
+++ b/index.html
@@ -656,6 +656,30 @@ Projects: Internal Stock handling system and a Sales Force Automation System
 											</a>
 										</div>
 									</div>
+									<div class="col-12 col-sm-6 col-lg-3 isotope-item pwebsites">
+										<div class="image-gallery-item mb-4 pb-3">
+											<a href="assets/projects/jaydeck.png" class="lightbox-portfolio">
+												<span class="thumb-info custom-thumb-info-1">
+													<span class="thumb-info-wrapper">
+														<span class="thumb-info-plus"></span>
+														<img src="assets/projects/jaydeck.png" class="img-fluid" alt="">
+													</span>
+												</span>
+											</a>
+										</div>
+									</div>
+									<div class="col-12 col-sm-6 col-lg-3 isotope-item pwebsites">
+										<div class="image-gallery-item mb-4 pb-3">
+											<a href="assets/projects/jaydeck.png" class="lightbox-portfolio">
+												<span class="thumb-info custom-thumb-info-1">
+													<span class="thumb-info-wrapper">
+														<span class="thumb-info-plus"></span>
+														<img src="assets/projects/jaydeck.png" class="img-fluid" alt="">
+													</span>
+												</span>
+											</a>
+										</div>
+									</div>
 								</div>
 							</div>
 						</div>
