--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		<meta name="keywords" content="Nipuni Dinushika, Web Developer, PHP Developer, Full-stack Developer, Front-end Developer" />
 		<meta name="description" content="Personal Portfolio">
 		<meta name="author" content="Nipuni Dinushika">
+		<meta name="google-adsense-account" content="ca-pub-1431201565863729">
 
 		<!-- Favicon -->
 		<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
