update skills section

--- a/index.html
+++ b/index.html
@@ -460,62 +460,85 @@ Projects: Internal Stock handling system and a Sales Force Automation System
 				<div class="container">
 					<div class="row align-items-center">
 						<div class="col-md-6 col-lg-8 mb-4 mb-md-0">
+							<h2 class="text-color-dark text-uppercase font-weight-extra-bold">Skills & Tools</h2>
 							<div class="row">
 								<div class="col-lg-6">
-									<h2 class="text-color-dark text-uppercase font-weight-extra-bold">Skills & Language</h2>
+									<h4 class="text-color-dark font-weight-bold">Frontend</h4>
 									<div class="progress-bars custom-progress-bars">
 										<div class="progress-label text-color-dark font-weight-semibold text-uppercase text-2">
-											<span>PHP</span>
+											<i class="fab fa-react text-color-primary mr-2"></i>
+											<span>React</span>
 										</div>
-
+										<div class="progress mb-2">
+											<div class="progress-bar" data-appear-progress-animation="90%"></div>
+										</div>
+										<div class="progress-label text-color-dark font-weight-semibold text-uppercase text-2">
+											<i class="fab fa-vuejs text-color-primary mr-2"></i>
+											<span>VUE.JS</span>
+										</div>
 										<div class="progress mb-2">
 											<div class="progress-bar" data-appear-progress-animation="95%"></div>
 										</div>
 										<div class="progress-label text-color-dark font-weight-semibold text-uppercase text-2">
-											<span>SQL</span>
-										</div>
-										<div class="progress mb-2">
-											<div class="progress-bar" data-appear-progress-animation="95%" data-appear-animation-delay="300"></div>
-										</div>
-										<div class="progress-label text-color-dark font-weight-semibold text-uppercase text-2">
-											<span>HTML/CSS</span>
-										</div>
-										<div class="progress mb-2">
-											<div class="progress-bar" data-appear-progress-animation="95%" data-appear-animation-delay="600"></div>
-										</div>
-										<div class="progress-label text-color-dark font-weight-semibold text-uppercase text-2">
-											<span>GIT</span>
-										</div>
-										<div class="progress mb-2">
-											<div class="progress-bar" data-appear-progress-animation="90%" data-appear-animation-delay="900"></div>
-										</div>
-									</div>
-								</div>
-								<div class="col-lg-6">
-									<div class="progress-bars custom-progress-bars custom-md-margin-top-1">
-										<div class="progress-label text-color-dark font-weight-semibold text-uppercase text-2">
-											<span>Javascript</span>
+											<i class="fab fa-angular text-color-primary mr-2"></i>
+											<span>Angular</span>
 										</div>
 										<div class="progress mb-2">
 											<div class="progress-bar" data-appear-progress-animation="80%"></div>
 										</div>
 										<div class="progress-label text-color-dark font-weight-semibold text-uppercase text-2">
-											<span>Wordpress</span>
+											<i class="fab fa-html5 text-color-primary mr-2"></i>
+											<span>HTML/CSS</span>
 										</div>
 										<div class="progress mb-2">
-											<div class="progress-bar" data-appear-progress-animation="75%" data-appear-animation-delay="300"></div>
+											<div class="progress-bar" data-appear-progress-animation="95%"></div>
 										</div>
 										<div class="progress-label text-color-dark font-weight-semibold text-uppercase text-2">
-											<span>AWS</span>
+											<i class="fab fa-js text-color-primary mr-2"></i>
+											<span>javascript</span>
 										</div>
 										<div class="progress mb-2">
-											<div class="progress-bar" data-appear-progress-animation="75%" data-appear-animation-delay="600"></div>
+											<div class="progress-bar" data-appear-progress-animation="95%"></div>
+										</div>
+									</div>
+								</div>
+								<div class="col-lg-6">
+									<h4 class="text-color-dark font-weight-bold">Backend</h4>
+									<div class="progress-bars custom-progress-bars">
+										<div class="progress-label text-color-dark font-weight-semibold text-uppercase text-2">
+											<i class="fab fa-php text-color-primary mr-2"></i>
+											<span>PHP</span>
+										</div>
+										<div class="progress mb-2">
+											<div class="progress-bar" data-appear-progress-animation="99%"></div>
 										</div>
 										<div class="progress-label text-color-dark font-weight-semibold text-uppercase text-2">
-											<span>Java/ Python</span>
+											<i class="fab fa-laravel text-color-primary mr-2"></i>
+											<span>Laravel</span>
 										</div>
 										<div class="progress mb-2">
-											<div class="progress-bar" data-appear-progress-animation="65%" data-appear-animation-delay="900"></div>
+											<div class="progress-bar" data-appear-progress-animation="90%"></div>
+										</div>
+										<div class="progress-label text-color-dark font-weight-semibold text-uppercase text-2">
+											<i class="fab fa-java text-color-primary mr-2"></i>
+											<span>Springboot</span>
+										</div>
+										<div class="progress mb-2">
+											<div class="progress-bar" data-appear-progress-animation="80%"></div>
+										</div>
+										<div class="progress-label text-color-dark font-weight-semibold text-uppercase text-2">
+											<i class="fab fa-node-js text-color-primary mr-2"></i>
+											<span>Node.js</span>
+										</div>
+										<div class="progress mb-2">
+											<div class="progress-bar" data-appear-progress-animation="85%"></div>
+										</div>
+										<div class="progress-label text-color-dark font-weight-semibold text-uppercase text-2">
+											<i class="fab fa-node-js text-color-primary mr-2"></i>
+											<span>Python</span>
+										</div>
+										<div class="progress mb-2">
+											<div class="progress-bar" data-appear-progress-animation="75%"></div>
 										</div>
 									</div>
 								</div>
@@ -525,19 +548,27 @@ Projects: Internal Stock handling system and a Sales Force Automation System
 							<div class="row">
 								<div class="col">
 									<div class="custom-box-details bg-color-light custom-box-shadow-1">
-										<h4 class="text-color-dark">Languages</h4>
+										<h4 class="text-color-dark">Tools</h4>
 										<ul class="custom-list-style-1 p-0">
 											<li>
-												<span class="font-weight-semibold custom-max-width-1 text-color-dark"><img src="img/blank.gif" class="flag flag-gb mr-1" alt="English">English:</span>
-												<span class="custom-text-color-2">Advanced</span>
+												<span class="font-weight-semibold text-color-dark"><i class="fab fa-git text-color-primary mr-2"></i>GIT:</span>
+												<span class="custom-text-color-2">GitHub, GitLab, Bitbucket</span>
 											</li>
 											<li>
-												<span class="font-weight-semibold custom-max-width-1 text-color-dark"><img src="img/blank.gif" class="flag flag-lk mr-1" alt="Spanish">Sinhala:</span>
-												<span class="custom-text-color-2">Advanced</span>
+												<span class="font-weight-semibold text-color-dark"><i class="fab fa-aws text-color-primary mr-2"></i>AWS Services:</span>
+												<span class="custom-text-color-2">EC2, RDS, S3, Route53</span>
 											</li>
 											<li>
-												<span class="font-weight-semibold custom-max-width-1 text-color-dark"><img src="img/blank.gif" class="flag flag-lk mr-1" alt="Française">Tamil:</span>
-												<span class="custom-text-color-2">Basic</span>
+												<span class="font-weight-semibold text-color-dark"><i class="fas fa-database text-color-primary mr-2"></i>Database Tech :</span>
+												<span class="custom-text-color-2">MySQL, PostgreSQL</span>
+											</li>
+											<li>
+												<span class="font-weight-semibold text-color-dark"><i class="fas fa-database text-color-primary mr-2"></i>Database (No SQL):</span>
+												<span class="custom-text-color-2">MongoDB</span>
+											</li>
+											<li>
+												<span class="font-weight-semibold text-color-dark"><i class="fab fa-connectdevelop text-color-primary mr-2"></i>Designing:</span>
+												<span class="custom-text-color-2">Photoshop, Figma</span>
 											</li>
 										</ul>
 									</div>
